# LlamaDiscordBot

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytorchimp.py  tester.py
llamaai/bot/: entrypoint.py
llamaai/experimentation/: redis_interact.py
llamaai/model/: Generation.py  RedisQueries.py  runner.py
